--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,9 @@
         <label for="camera_z">Z: </label>
         <input type="number" id="camera_z" step="0.01">
     </div>
-    <script src="https://unpkg.com/three@0.142.0/build/three.min.js"></script>
-    <script src="https://unpkg.com/three@0.142.0/examples/js/controls/OrbitControls.js"></script>
+
+    <script src="https://unpkg.com/three@0.142.0/build/three.min.js" integrity="sha384-cJucAWTmbXzRd5kRsfGUtc1WbnUGXRWJraQnGybiGbsfpt+EBvTrOSoUu25U9HXt" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/three@0.142.0/examples/js/controls/OrbitControls.js" integrity="sha384-agDUL1zphbxZzcozmoJHZxjXk9CemsDjK/8FSI+6CJm3C9NoU8vJic8jiGz7qW8y" crossorigin="anonymous"></script>
     <script src="ball.js"></script>
 </body>
 </html>
